client-services-page-added

--- a/client-services.html
+++ b/client-services.html
@@ -136,201 +136,77 @@
     <!-- =================  breadcrumb section starts  ================================= -->
     <section class="breadcrumb_section">
         <div class="image">
-            <img src="assets/images/breadcrumbs/about-page.jpg" alt="breadcrumb">
+            <img src="assets/images/breadcrumbs/client-service.jpg" alt="breadcrumb">
         </div>
     </section>
     <!-- =================  breadcrumb section ends  ================================= -->
 
 
-    <!-- =================  About introduction section starts  ================================= -->
+    <!-- =================  client services section starts  ================================= -->
     <section class="section_pd_tb">
         <div class="container">
             <div class="section_header">
                 <h2><span>Medical Staff</span></h2>
-                <h3>About US</span></h3>
+                <h3>Client Services</span></h3>
             </div>
             <div class="row padding_added_row about_intro">
                 <div class="col-lg-12 col-md-12 col-12">
                     <p>
-                        Welcome to Medical Staff, a leading medical and nursing employment agency with offices throughout Australia. We specialise in placing 
-                        registered nurses, midwives, and ENs in both private and public hospitals. Our ISO 9001 accreditation and preferred supplier agreements 
-                        with hospitals make us a trusted partner for clients and job seekers alike.
+                        <strong>Medical Staff Nursing Agency</strong> is a leading, nationwide provider of general and specialised nursing staff, doctors, and allied health professionals to facilities across Australia. High quality service provision and thorough policies and frameworks are at the core of our business operation, and as such, Medical Staff maintains <strong>ISO 9001 accreditation for its quality assurance and management.</strong>
                     </p>
                 </div>
-                <div class="col-lg-8 about_items about_item1">
+                <div class="col-lg-7 about_items about_item1">
                     <p>
-                        We understand that finding the right job can be challenging, which is why we offer a wide range of work opportunities in both public and private hospitals across Australia. As equal opportunity employers, we welcome nurses from diverse backgrounds to apply. Whether you're a backpacker nurse on a work and holiday visa or a student nurse looking for part-time work, we have opportunities for you. For those seeking sponsorship, Medical Staff is approved to sponsor nurses (Conditions Apply).
+                        For nearly 2 decades, Medical Staff Nursing Agency has been recruiting and supplying Nurses and Midwives to healthcare and community facilities across Australia. Medical Staff places healthcare professionals in public and private hospitals, aged care facilities, retirement villages, private clinics, universities, TAFE, schools, Medical centres, NDIS and disability services, Homecare, vaccination, to name a few key examples. 
                         <br><br>
-                        Our unique selling proposition lies in our personalized approach to staffing. We believe in getting to know our clients and candidates on a personal level to ensure the best fit for all parties involved. But don't just take our word for it! Our satisfied clients and employees have shared their experiences with us through testimonials, which you can read on our website
+                        Medical Staff Nursing Agency prides itself in supplying experienced, highly skilled, and specialised Nursing staff across Australia.
+                        <br><br>
+                        The team of Directors and Management at Medical Staff use their combined expert knowledge of the public and private healthcare industry to empower staff to work to their best abilities.
+                        <br><br>
+                        Our mission is centred on providing a tailored and individualised service to each of our clients, with a deep understanding of their needs, requirements, and expectations for staffing provision.
+                        <br><br>
+                        Each Agency staff member arrives at their first shift ready to work and equipped with all the prior induction. Medical Staff believes in time and cost saving initiatives, including saving our hospitals from having to conduct orientations for new staff. With a competitive rate of charge, Medical Staff always aims to save you money while providing the highest quality of staff and customer service support.
                     </p>
                 </div>
-                <div class="col-lg-4 about_items">
-                    <div class="image">
-                        <img src="assets/images/about-us.jpg" alt="about us">
+                <div class="col-lg-5 about_items">
+                    <div class="image pt-4">
+                        <img src="assets/images/client-services-1.jpg" alt="about us">
                     </div>
                 </div>
             </div>
         </div>
     </section>
-    <!-- =================  About introduction section ends  ================================= -->
+    <!-- ================= client services section ends  ================================= -->
 
 
-    <!-- =================  Our Story section starts  ================================= -->
-    <section class="our_story_section">
-        <div class="story_wrap">
-            <div class="">
-                <div class="section_pd_tb story_left">
-                    <div class="wrapper">
-                        <div class="section_header mb-0">
-                            <h3 style="text-align: left;">Our <span>Story</span></h3>
-                        </div>
-                        <p>
-                            Our story began with a passion for providing highly skilled, talented, and specialised nurses to national hospitals around Australia. At Medical Staff, we're committed to finding the best match for our clients and employees. Our dedicated team of professionals work tirelessly to ensure that we provide a high-quality service that meets our clients' needs and expectations.
-                        </p>
-                        <div class="accredation_row accredation_row2">
-                            <div class="accredation_item">
-                                <div class="accr_image">
-                                    <img src="assets/images/accredation-licence/accr3.png" alt="Accreditation - Licence">
-                                </div>
-                            </div>
-                            <div class="accredation_item">
-                                <div class="accr_image">
-                                    <img src="assets/images/medical-staff-logo.png" alt="Accreditation - Licence">
-                                </div>
-                            </div>
-                            <div class="accredation_item">
-                                <div class="accr_image">
-                                    <img src="assets/images/accredation-licence/accr4.png" alt="Accreditation - Licence">
-                                </div>
-                            </div>
-                        </div>
+    <!-- =================  nationwide service section starts  ================================= -->
+    <section class="section_pd_tb nationwide_section">
+         <div class="container">
+            <div class="row padding_added_row about_intro nationwide_row">
+                <div class="section_header mb-0">
+                    <h3>Nationwide Service</span></h3>
+                    <h2><span>Area We </span> Cover</h2>
+                </div>
+                <div class="header_text">
+                    <p> 
+                        We prove nationwide staffing services for various medical positions,
+                        including registered nurses ,midwives, general nurses, mental health
+                        nurses, ICU and emergency nurses, theatre nurses, clinical
+                        facilitators, technicians, carers, aged care staff, and allied health
+                        professionals.
+                    </p>
+                </div>
+            </div> 
+            <div class="row padding_added_row">
+                <div class="owl-carousel owl-carousel2">
+                    <div class="nationwide_item"> 
+                        
                     </div>
                 </div>
-            </div>
-        </div>
-        <div class="story_image">
-            <div class="image">
-                <img src="assets/images/our-story.jpg" alt="our story">
-            </div>
-        </div>
+            </div> 
+         </div>
     </section>
-    <!-- ================= Our Story section ends  ================================= -->
-
-
-    <!-- =================  accredation section starts  ================================= -->
-     <section class="section_pd_tb">
-        <div class="container">
-            <div class="section_header">
-                <h2><span>Accredation</span> - Licence</h2>
-            </div>
-            <div class="padding_added_row accredation_row">
-                <div class="accredation_item">
-                    <div class="accr_image">
-                        <img src="assets/images/accredation-licence/accr1.png" alt="Accreditation - Licence">
-                    </div>
-                </div>
-                <div class="accredation_item">
-                    <div class="accr_image">
-                        <img src="assets/images/accredation-licence/accr2.png" alt="Accreditation - Licence">
-                    </div>
-                </div>
-                <div class="accredation_item">
-                    <div class="accr_image">
-                        <img src="assets/images/accredation-licence/accr3.png" alt="Accreditation - Licence">
-                    </div>
-                </div>
-                <div class="accredation_item">
-                    <div class="accr_image">
-                        <img src="assets/images/accredation-licence/accr4.png" alt="Accreditation - Licence">
-                    </div>
-                </div>
-            </div>
-        </div>
-     </section>
-    <!-- =================  accredation section ends  ================================= -->
-
-
-    <!-- =================  find jobs state section starts  ================================= -->
-    <section class="section_pd_tb pt-0 pt-lg-4">
-        <div class="container">
-            <div class="section_header">
-                <h3>Finds Jobs In <span>All State</span></h3>
-                <h2>Jobs Available In Different States</h2>
-            </div>
-            <div class="row jobs_state_row padding_added_row">
-                <div class="col-lg-4 col-md-4 col-6 job_state_item">
-                    <div class="job_state_item_wrap">
-                        <a href="#">
-                            <img src="assets/images/job-states/new-south-wales.jpg" alt="New South Wales">
-                        </a>
-                        <div class="job_state_title">
-                            <h5><a href="">New South Wales</a></h5>
-                            <p><a href="">2 jobs open</a></p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-4 col-6 job_state_item">
-                    <div class="job_state_item_wrap">
-                        <a href="#">
-                            <img src="assets/images/job-states/queensland.jpg" alt="Queensland">
-                        </a>
-                        <div class="job_state_title">
-                            <h5><a href="">Queensland</a></h5>
-                            <p><a href="">2 jobs open</a></p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-4 col-6 job_state_item">
-                    <div class="job_state_item_wrap">
-                        <a href="#">
-                            <img src="assets/images/job-states/victoria.jpg" alt="Victoria">
-                        </a>
-                        <div class="job_state_title">
-                            <h5><a href="">Victoria</a></h5>
-                            <p><a href="">2 jobs open</a></p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-4 col-6 job_state_item">
-                    <div class="job_state_item_wrap">
-                        <a href="#">
-                            <img src="assets/images/job-states/south-wales.jpg" alt="South Australia">
-                        </a>
-                        <div class="job_state_title">
-                            <h5><a href="">South Australia</a></h5>
-                            <p><a href="">2 jobs open</a></p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-4 col-6 job_state_item">
-                    <div class="job_state_item_wrap">
-                        <a href="#">
-                            <img src="assets/images/job-states/western-australia.jpg" alt="New South Wales">
-                        </a>
-                        <div class="job_state_title">
-                            <h5><a href="">Western Australia</a></h5>
-                            <p><a href="">2 jobs open</a></p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-4 col-6 job_state_item">
-                    <div class="job_state_item_wrap">
-                        <a href="#">
-                            <img src="assets/images/job-states/northern-territory.jpg" alt="New South Wales">
-                        </a>
-                        <div class="job_state_title">
-                            <h5><a href="">Northern Territory/Tasmania</a></h5>
-                            <p><a href="">2 jobs open</a></p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="jobs_by_region_button">
-                <a href="">Find Jobs By Region</a>
-            </div>
-        </div>
-    </section>
-    <!-- =================  find jobs state section ends  ================================= -->
+    <!-- =================  nationwide service section starts  ================================= -->
 
 
     <!-- =================  Contact Us section starts  ================================= -->
@@ -544,11 +420,11 @@
     <!-- testimonial owl carasoul -->
     <script>
         $(document).ready(function(){
-            $('.owl-carousel').owlCarousel({
+            $('.owl-carousel2').owlCarousel({
                 loop:false,
                 margin: 30,
-                nav:false,
-                autoplay:true,
+                nav:true,
+                autoplay:false,
                 autoplayTimeout:5000,
                 autoplayHoverPause:false,
                 responsive:{
@@ -556,10 +432,10 @@
                         items:1
                     },
                     600:{
-                        items:2
+                        items:1
                     },
                     1000:{
-                        items:3
+                        items:1
                     }
                 }
             })
