--- a/work-holiday.html
+++ b/work-holiday.html
@@ -82,7 +82,7 @@
                         <a class="nav-link active" aria-current="page" href="#">Home</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="#">About Us</a>
+                        <a class="nav-link" href="about.html">About Us</a>
                       </li>
                       <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -105,10 +105,10 @@
                         </ul>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="#">Work and Holiday Nursing</a>
+                        <a class="nav-link" href="work-holiday.html">Work and Holiday Nursing</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="#">Client Services</a>
+                        <a class="nav-link" href="client-services.html">Client Services</a>
                       </li>
                       <li class="nav-item">
                         <a class="nav-link" href="#">Breaking News</a>
