nation-wide-section-added

--- a/client-services.html
+++ b/client-services.html
@@ -197,13 +197,143 @@
                     </p>
                 </div>
             </div> 
-            <div class="row padding_added_row">
+            <div class="row padding_added_row area_we_cover_row">
                 <div class="owl-carousel owl-carousel2">
+
                     <div class="nationwide_item"> 
-                        
+                        <div class="n_item_left">
+                            <div class="image">
+                                <div class="img_main">
+                                    <img src="assets/images/area-we-cover/threatre-nurses-cs.jpg" alt="Theatre Nurses">
+                                </div>
+                                <div class="n_text_content">
+                                    <h3>Theatre Nurses</h3>
+                                    <div class="content_list">
+                                        <div class="n_list">
+                                            <img src="assets/icons/icon_check.png" alt="Icon">
+                                            <p>Scout</p>
+                                        </div>
+                                        <div class="n_list">
+                                            <img src="assets/icons/icon_check.png" alt="Icon">
+                                            <p>Scrub</p>
+                                        </div>
+                                        <div class="n_list">
+                                            <img src="assets/icons/icon_check.png" alt="Icon">
+                                            <p>Anaesthetic</p>
+                                        </div>
+                                        <div class="n_list">
+                                            <img src="assets/icons/icon_check.png" alt="Icon">
+                                            <p>Recovery</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="n_item_right">
+                            <div class="n_wrapper">
+                                <div class="image">
+                                    <img src="assets/images/area-we-cover/clinical-facilitation-cs.jpg" alt="Clinical Facilitation And Clinical Education">
+                                    <p>Clinical Facilitation And Clinical Education</p>
+                                </div>
+                            </div>
+                            <div class="n_wrapper">
+                                <div class="image">
+                                    <img src="assets/images/area-we-cover/registered-midwives-cs.jpg" alt="Registered Midwives">
+                                    <p>Registered Midwives</p>
+                                </div>
+                            </div>
+                        </div>
                     </div>
+
+                    <div class="nationwide_item"> 
+                        <div class="n_item_left">
+                            <div class="image">
+                                <div class="img_main">
+                                    <img src="assets/images/area-we-cover/general-nursing.jpg" alt="General Nursing">
+                                </div> 
+                                <div class="n_text_content">
+                                    <h3>General Nursing</h3>
+                                    <div class="content_list">
+                                        <div class="n_list">
+                                            <img src="assets/icons/icon_check.png" alt="Icon">
+                                            <p>Medical/Surgical</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="n_item_right">
+                            <div class="n_wrapper">
+                                <div class="image">
+                                    <img src="assets/images/area-we-cover/icu-and-emergency.jpg" alt="ICU & Emergency Nursing">
+                                    <p>ICU & Emergency Nursing</p>
+                                </div>
+                            </div>
+                            <div class="n_wrapper">
+                                <div class="image">
+                                    <img src="assets/images/area-we-cover/carers.jpg" alt="Carers">
+                                    <p>Carers</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="nationwide_item"> 
+                        <div class="n_item_left">
+                            <div class="image">
+                                <div class="img_main">
+                                    <img src="assets/images/area-we-cover/registered-nurses.jpg" alt="Registered Nurses">
+                                </div>
+                                <div class="n_text_content">
+                                    <h3>Registered Nurses</h3>
+                                    <div class="content_list">
+                                        <div class="n_list">
+                                            <img src="assets/icons/icon_check.png" alt="Icon">
+                                            <p>RN: Registered Nurse</p>
+                                        </div>
+                                        <div class="n_list">
+                                            <img src="assets/icons/icon_check.png" alt="Icon">
+                                            <p>EEN: Enrolled Endorsed Nurse</p>
+                                        </div>
+                                        <div class="n_list">
+                                            <img src="assets/icons/icon_check.png" alt="Icon">
+                                            <p>AIN: Assistant in Nursing</p>
+                                        </div>
+                                        <div class="n_list">
+                                            <img src="assets/icons/icon_check.png" alt="Icon">
+                                            <p>PCA: Patient Care Assistant</p>
+                                        </div>
+                                        <div class="n_list">
+                                            <img src="assets/icons/icon_check.png" alt="Icon">
+                                            <p>PCW: Personal Care Worker</p>
+                                        </div>
+                                        <div class="n_list">
+                                            <img src="assets/icons/icon_check.png" alt="Icon">
+                                            <p>PSA: Patient Services Assistant</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="n_item_right">
+                            <div class="n_wrapper">
+                                <div class="image">
+                                    <img src="assets/images/area-we-cover/allied-health-professionals.jpg" alt="Allied Health Professionals">
+                                    <p>Allied Health Professionals</p>
+                                </div>
+                            </div>
+                            <div class="n_wrapper">
+                                <div class="image">
+                                    <img src="assets/images/area-we-cover/aged-care-staff.jpg" alt="Aged Care Staff">
+                                    <p>Aged Care Staff</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
                 </div>
-            </div> 
+            </div>
+
          </div>
     </section>
     <!-- =================  nationwide service section starts  ================================= -->
