client-services-page-completed

--- a/client-services.html
+++ b/client-services.html
@@ -339,6 +339,132 @@
     <!-- =================  nationwide service section starts  ================================= -->
 
 
+    <!-- =================  accredation section starts  ================================= -->
+    <section class="section_pd_tb">
+        <div class="container">
+            <div class="section_header">
+                <h2><span>Accredation</span> - Licence</h2>
+            </div>
+            <div class="padding_added_row accredation_row">
+                <div class="accredation_item">
+                    <div class="accr_image">
+                        <img src="assets/images/accredation-licence/accr1.png" alt="Accreditation - Licence">
+                    </div>
+                </div>
+                <div class="accredation_item">
+                    <div class="accr_image">
+                        <img src="assets/images/accredation-licence/accr2.png" alt="Accreditation - Licence">
+                    </div>
+                </div>
+                <div class="accredation_item">
+                    <div class="accr_image">
+                        <img src="assets/images/accredation-licence/accr3.png" alt="Accreditation - Licence">
+                    </div>
+                </div>
+                <div class="accredation_item">
+                    <div class="accr_image">
+                        <img src="assets/images/accredation-licence/accr4.png" alt="Accreditation - Licence">
+                    </div>
+                </div>
+            </div>
+        </div>
+     </section>
+    <!-- =================  accredation section ends  ================================= -->
+
+
+    <!-- =================  medical staff services section starts  ================================= -->
+    <section class="section_pd_tb">
+        <div class="container">
+            <div class="section_header">
+                <h2>Medical Staff Services</h2>
+            </div>
+            <div class="padding_added_row">
+                <div class="mss_top_text">
+                    <p>We offer staffing solutions for various industries such as healthcare, education, aged care, disability services, community services, domestic services, and more. Our services include temporary, contract, and permanent recruitment.</p>
+                </div>
+                <div class="mss_service_list">
+                    <h3>Medical Staff Services include:</h3>
+                    <div class="mss_list">
+                        <div class="mss_list1">
+                            <div class="mss_list_item">
+                                <img src="assets/icons/right.png" alt="Icon">
+                                <p>Temporary, Contract and Permanent Recruitment</p>
+                            </div>
+                            <div class="mss_list_item">
+                                <img src="assets/icons/right.png" alt="Icon">
+                                <p>Public and Private Hospitals</p>
+                            </div>
+                            <div class="mss_list_item">
+                                <img src="assets/icons/right.png" alt="Icon">
+                                <p>Universities and TAFE</p>
+                            </div>
+                            <div class="mss_list_item">
+                                <img src="assets/icons/right.png" alt="Icon">
+                                <p>Aged Care Facilities and Nursing Homes</p>
+                            </div>
+                            <div class="mss_list_item">
+                                <img src="assets/icons/right.png" alt="Icon">
+                                <p>NDIS and Disability Services</p>
+                            </div>
+                        </div>
+                        <div class="mss_list2">
+                            <div class="mss_list_item">
+                                <img src="assets/icons/right.png" alt="Icon">
+                                <p>Social and Community Services</p>
+                            </div>
+                            <div class="mss_list_item">
+                                <img src="assets/icons/right.png" alt="Icon">
+                                <p>Domestic Services</p>
+                            </div>
+                            <div class="mss_list_item">
+                                <img src="assets/icons/right.png" alt="Icon">
+                                <p>Private Homecare and Private patients at Hospitals</p>
+                            </div>
+                            <div class="mss_list_item">
+                                <img src="assets/icons/right.png" alt="Icon">
+                                <p>Vaccination Hubs and Sites</p>
+                            </div>
+                            <div class="mss_list_item">
+                                <img src="assets/icons/right.png" alt="Icon">
+                                <p>And more - just <a href="contact.html">enquire now</a></p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="centered_para_div">
+                    <h3>Contact Medical Staff</h3>
+                    <p>For any immediate or future staffing needs please contact our team today. We have many nursing staff available for day to day booking or for future advance booking to cover your roster. Call us on <a href="tel:1300105010">1300 10 50 10</a> to speak with our friendly Allocations team who can assist you in finding experienced, motivated, and qualified Nursing / Healthcare staff to fit your needs. If you are a current client, please feel free to call us 24/7 or make an online booking</p>
+                </div>
+                <div class="centered_para_div">
+                    <h3>Our Mission</h3>
+                    <p>At Medical Staff Nursing Agency, our mission is the 100% satisfaction of our clients. We have been successful in achieving this by our strict screening of candidates, compliances and offering only the most qualified and experienced staff. We recruit and place according to our clients needs and execute strategic planning to ensure our capacity to meet your fluctuating staffing requirements.</p>
+                </div>
+                <div class="centered_para_div">
+                    <h3>Register with Medical Staff</h3>
+                    <p>Please feel free to contact us if you have any queries or to join Medical Staff Nursing Agency as a client. To request for more information about our services or registration please click on the link: <a href=""></a></p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- =================  medical staff services section starts  ================================= -->
+
+
+    <section class="mt-5 small_cta_section">
+        <div class="container py-4">
+            <div class="padding_added_row">
+                <div class="row small_cta_row">
+                    <div class="col-lg-9 col-md-9 col-12 text_left">
+                        <h4><span>Call</span> Medical Staff on 1300 10 50 10 to discuss the needs of your facility/ organisation with the relevant state manager.</h4>
+                    </div>
+                    <div class="col-lg-3 col-md-3 col-12 call_button">
+                         <a href="tel:1300105010">Call Us</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
     <!-- =================  Contact Us section starts  ================================= -->
     <section class="section_pd_tb contact_us_section">
         <div class="container pb-4">
