--- a/index.html
+++ b/index.html
@@ -920,5 +920,30 @@
         });
     </script>
 
+    <!-- client services page nationwide service slider -->
+    <script>
+        $(document).ready(function(){
+            $('.owl-carousel2').owlCarousel({
+                loop:false,
+                margin: 30,
+                nav:true,
+                autoplay:false,
+                autoplayTimeout:5000,
+                autoplayHoverPause:false,
+                responsive:{
+                    0:{
+                        items:1
+                    },
+                    600:{
+                        items:1
+                    },
+                    1000:{
+                        items:1
+                    }
+                }
+            })
+        });
+    </script>
+
 </body>
 </html>
