--- a/about.html
+++ b/about.html
@@ -79,7 +79,7 @@
                   <div class="collapse navbar-collapse navbar_collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0 navbar_ul">
                       <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                       </li>
                       <li class="nav-item">
                         <a class="nav-link" href="about.html">About Us</a>
@@ -111,10 +111,10 @@
                         <a class="nav-link" href="client-services.html">Client Services</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="#">Breaking News</a>
+                        <a class="nav-link" href="blog.html">Breaking News</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="#">Contact Us</a>
+                        <a class="nav-link" href="contact.html">Contact Us</a>
                       </li>
                     </ul>
                     <div class="header_buttons">
