--- a/recruitment.html
+++ b/recruitment.html
@@ -136,7 +136,7 @@
     <!-- =================  breadcrumb section starts  ================================= -->
     <section class="breadcrumb_section">
         <div class="image">
-            <img src="assets/images/breadcrumbs/client-service.jpg" alt="breadcrumb">
+            <img src="assets/images/breadcrumbs/recruitment.jpg" alt="breadcrumb">
         </div>
     </section>
     <!-- =================  breadcrumb section ends  ================================= -->
@@ -147,30 +147,26 @@
         <div class="container">
             <div class="section_header">
                 <h2><span>Medical Staff</span></h2>
-                <h3>Client Services</h3>
+                <h3>Recruitment</h3>
             </div>
             <div class="row padding_added_row about_intro">
                 <div class="col-lg-12 col-md-12 col-12">
                     <p>
-                        <strong>Medical Staff Nursing Agency</strong> is a leading, nationwide provider of general and specialised nursing staff, doctors, and allied health professionals to facilities across Australia. High quality service provision and thorough policies and frameworks are at the core of our business operation, and as such, Medical Staff maintains <strong>ISO 9001 accreditation for its quality assurance and management.</strong>
+                        At Medical Staff, we help our Nursing Staff and Clients with permanent roles by matching skills and experience of our nurses with the requirements and needs of our respective clients.
                     </p>
                 </div>
                 <div class="col-lg-7 about_items about_item1">
                     <p>
-                        For nearly 2 decades, Medical Staff Nursing Agency has been recruiting and supplying Nurses and Midwives to healthcare and community facilities across Australia. Medical Staff places healthcare professionals in public and private hospitals, aged care facilities, retirement villages, private clinics, universities, TAFE, schools, Medical centres, NDIS and disability services, Homecare, vaccination, to name a few key examples. 
+                        Our expertise lies in personalised service and consideration of all factors that are important to you – location, convenience, role descriptions, rostering and more.
                         <br><br>
-                        Medical Staff Nursing Agency prides itself in supplying experienced, highly skilled, and specialised Nursing staff across Australia.
+                        At Medical Staff, we value the satisfaction of our clients and staff at all times.
                         <br><br>
-                        The team of Directors and Management at Medical Staff use their combined expert knowledge of the public and private healthcare industry to empower staff to work to their best abilities.
-                        <br><br>
-                        Our mission is centred on providing a tailored and individualised service to each of our clients, with a deep understanding of their needs, requirements, and expectations for staffing provision.
-                        <br><br>
-                        Each Agency staff member arrives at their first shift ready to work and equipped with all the prior induction. Medical Staff believes in time and cost saving initiatives, including saving our hospitals from having to conduct orientations for new staff. With a competitive rate of charge, Medical Staff always aims to save you money while providing the highest quality of staff and customer service support.
+                        Our mission is to help the healthcare industry, patients and communities across Australia with appropriate staffing and quality service provision. Our key strength as complimented by our client partners lies in our proactivity, quick response and use of the best available qualified staff to fill workforce shortages.
                     </p>
                 </div>
-                <div class="col-lg-5 about_items">
+                <div class="col-lg-4 about_items">
                     <div class="image pt-4">
-                        <img src="assets/images/client-services-1.jpg" alt="about us">
+                        <img src="assets/images/recruitment-intro.jpg" alt="about us">
                     </div>
                 </div>
             </div>
@@ -178,6 +174,31 @@
     </section>
     <!-- ================= client services section ends  ================================= -->
 
+    <section class="recruit_cta">
+        <div class="container pb-5">
+            <div class="padding_added_row">
+                <div class="row small_cta_row">
+                    <div class="col-lg-8 col-md-6 col-12 text_left">
+                        <p>
+                            Call Medical Staff on <a href="tel:13001050">1300 10 50</a> to discuss your needs with relevant State Manager.
+                        </p>
+                    </div>
+                    <div class="col-lg-4 col-md-6 col-12 call_button">
+                         <a href="">Recruit Today</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="section_pd_tb full_bg_info_section">
+        <div class="container">
+            <div class="padding_added_row">
+                <h3>Bonus on offer for Rural & Regional Nursing with a bonus of $1000 for every 8 weeks of contract you successfully complete.</h4>
+                <p>*Conditions Apply</p>
+            </div>
+        </div>
+    </section>
 
     <!-- =================  nationwide service section starts  ================================= -->
     <section class="section_pd_tb nationwide_section">
@@ -337,132 +358,6 @@
          </div>
     </section>
     <!-- =================  nationwide service section starts  ================================= -->
-
-
-    <!-- =================  accredation section starts  ================================= -->
-    <section class="section_pd_tb">
-        <div class="container">
-            <div class="section_header">
-                <h2><span>Accredation</span> - Licence</h2>
-            </div>
-            <div class="padding_added_row accredation_row">
-                <div class="accredation_item">
-                    <div class="accr_image">
-                        <img src="assets/images/accredation-licence/accr1.png" alt="Accreditation - Licence">
-                    </div>
-                </div>
-                <div class="accredation_item">
-                    <div class="accr_image">
-                        <img src="assets/images/accredation-licence/accr2.png" alt="Accreditation - Licence">
-                    </div>
-                </div>
-                <div class="accredation_item">
-                    <div class="accr_image">
-                        <img src="assets/images/accredation-licence/accr3.png" alt="Accreditation - Licence">
-                    </div>
-                </div>
-                <div class="accredation_item">
-                    <div class="accr_image">
-                        <img src="assets/images/accredation-licence/accr4.png" alt="Accreditation - Licence">
-                    </div>
-                </div>
-            </div>
-        </div>
-     </section>
-    <!-- =================  accredation section ends  ================================= -->
-
-
-    <!-- =================  medical staff services section starts  ================================= -->
-    <section class="section_pd_tb">
-        <div class="container">
-            <div class="section_header">
-                <h2>Medical Staff Services</h2>
-            </div>
-            <div class="padding_added_row">
-                <div class="mss_top_text">
-                    <p>We offer staffing solutions for various industries such as healthcare, education, aged care, disability services, community services, domestic services, and more. Our services include temporary, contract, and permanent recruitment.</p>
-                </div>
-                <div class="mss_service_list">
-                    <h3>Medical Staff Services include:</h3>
-                    <div class="mss_list">
-                        <div class="mss_list1">
-                            <div class="mss_list_item">
-                                <img src="assets/icons/right.png" alt="Icon">
-                                <p>Temporary, Contract and Permanent Recruitment</p>
-                            </div>
-                            <div class="mss_list_item">
-                                <img src="assets/icons/right.png" alt="Icon">
-                                <p>Public and Private Hospitals</p>
-                            </div>
-                            <div class="mss_list_item">
-                                <img src="assets/icons/right.png" alt="Icon">
-                                <p>Universities and TAFE</p>
-                            </div>
-                            <div class="mss_list_item">
-                                <img src="assets/icons/right.png" alt="Icon">
-                                <p>Aged Care Facilities and Nursing Homes</p>
-                            </div>
-                            <div class="mss_list_item">
-                                <img src="assets/icons/right.png" alt="Icon">
-                                <p>NDIS and Disability Services</p>
-                            </div>
-                        </div>
-                        <div class="mss_list2">
-                            <div class="mss_list_item">
-                                <img src="assets/icons/right.png" alt="Icon">
-                                <p>Social and Community Services</p>
-                            </div>
-                            <div class="mss_list_item">
-                                <img src="assets/icons/right.png" alt="Icon">
-                                <p>Domestic Services</p>
-                            </div>
-                            <div class="mss_list_item">
-                                <img src="assets/icons/right.png" alt="Icon">
-                                <p>Private Homecare and Private patients at Hospitals</p>
-                            </div>
-                            <div class="mss_list_item">
-                                <img src="assets/icons/right.png" alt="Icon">
-                                <p>Vaccination Hubs and Sites</p>
-                            </div>
-                            <div class="mss_list_item">
-                                <img src="assets/icons/right.png" alt="Icon">
-                                <p>And more - just <a href="contact.html">enquire now</a></p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="centered_para_div">
-                    <h3>Contact Medical Staff</h3>
-                    <p>For any immediate or future staffing needs please contact our team today. We have many nursing staff available for day to day booking or for future advance booking to cover your roster. Call us on <a href="tel:1300105010">1300 10 50 10</a> to speak with our friendly Allocations team who can assist you in finding experienced, motivated, and qualified Nursing / Healthcare staff to fit your needs. If you are a current client, please feel free to call us 24/7 or make an online booking</p>
-                </div>
-                <div class="centered_para_div">
-                    <h3>Our Mission</h3>
-                    <p>At Medical Staff Nursing Agency, our mission is the 100% satisfaction of our clients. We have been successful in achieving this by our strict screening of candidates, compliances and offering only the most qualified and experienced staff. We recruit and place according to our clients needs and execute strategic planning to ensure our capacity to meet your fluctuating staffing requirements.</p>
-                </div>
-                <div class="centered_para_div">
-                    <h3>Register with Medical Staff</h3>
-                    <p>Please feel free to contact us if you have any queries or to join Medical Staff Nursing Agency as a client. To request for more information about our services or registration please click on the link: <a href=""></a></p>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- =================  medical staff services section starts  ================================= -->
-
-
-    <section class="mt-5 small_cta_section">
-        <div class="container py-4">
-            <div class="padding_added_row">
-                <div class="row small_cta_row">
-                    <div class="col-lg-9 col-md-9 col-12 text_left">
-                        <h4><span>Call</span> Medical Staff on 1300 10 50 10 to discuss the needs of your facility/ organisation with the relevant state manager.</h4>
-                    </div>
-                    <div class="col-lg-3 col-md-3 col-12 call_button">
-                         <a href="tel:1300105010">Call Us</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
 
 
     <!-- =================  Contact Us section starts  ================================= -->
