small-fixes-done

--- a/recruitment.html
+++ b/recruitment.html
@@ -174,7 +174,7 @@
     </section>
     <!-- ================= client services section ends  ================================= -->
 
-    <section class="recruit_cta">
+    <section class="recruit_cta mb-lg-4">
         <div class="container pb-5">
             <div class="padding_added_row">
                 <div class="row small_cta_row">
