--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                         <a class="nav-link" href="about.html">About Us</a>
                       </li>
                       <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        <a class="nav-link dropdown-toggle" href="recruitment.html" id="navbarDropdown" role="button" aria-expanded="false">
                           Recruitment
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
