--- a/referral-bonus.html
+++ b/referral-bonus.html
@@ -142,7 +142,7 @@
     <!-- =================  breadcrumb section ends  ================================= -->
 
 
-    <!-- =================  client services section starts  ================================= -->
+    <!-- =================  Referral Bonus section starts  ================================= -->
     <section class="section_pd_tb">
         <div class="container">
             <div class="section_header">
@@ -171,7 +171,7 @@
             </div>
         </div>
     </section>
-    <!-- ================= client services section ends  ================================= -->
+    <!-- ================= Referral Bonus section ends  ================================= -->
 
 
     <!-- =================  Contact Us section starts  ================================= -->
